changing the pages titles according the usability and seo

--- a/project1.html
+++ b/project1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title> Skrepinskaya Natalia Project 1</title>
+    <title> Skrepinskaya Natalia Ink Tank App</title>
 </head>
 <body>
 	<header> <!--position fixed--> 
