--- a/project2.html
+++ b/project2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Skrepinskaya Natalia Project 2</title>
+    <title>Skrepinskaya Natalia Fitted App</title>
 </head>
 <body>
 	<header> <!--position fixed--> 
