--- a/project3.html
+++ b/project3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Skrepinskaya Natalia Project 3</title>
+    <title>Skrepinskaya Natalia Vocabulary App</title>
 </head>
 <body>
 	<header> <!--position fixed--> 
