--- a/project4.html
+++ b/project4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Skrepinskaya Natalia Project 4</title>
+    <title>Skrepinskaya Natalia Puella website</title>
 </head>
 <body>
 	<header> <!--position fixed--> 
