Added favicon to html file and in images as png and ico files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Skrepinskaya Natalia UX/UI Designer</title>
+    <link rel="shortcut icon"  href="./images/favicon-2.ico" type="image/x-icon"> 
+    <title>Skrepinskaya Natalia UX/UI Designer</title>   
 </head>
 <body>
     <header> <!--position fixed--> 
@@ -21,7 +22,8 @@
         </div>
 	</header>
 	        
-	<div id="home">  <!-- the section #home-->   
+	<div id="home">  <!-- the section #home--> 
+
         <div><!-- added in the div because it will be another typography style than for others h1 in sections-->
             <h1>Give me the responsability to make your business better!</h1>                   
         </div>
