--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div> 
         <a href="project1.html"> <!--project1-->
           <div> <!--image block-->
-            <img src="./images/project1/home_page1@1x.png" srcset="./images/project1/home_page1@1x.png 1x, ./images/project1/home_page1@2x.png 2x, .images/project1/home_page1@3x.png 3x" alt="Ink Tank App">
+            <img src="../images/project1/home_page1@1x.png" srcset="../images/project1/home_page1@1x.png 1x, ../images/project1/home_page1@2x.png 2x, ../images/project1/home_page1@3x.png 3x" alt="Ink Tank App">
           </div>
           <div> <!--content block-->
             <p>UX Project Ink Tank App for tattoo lovers and tattoo artists. For finding the design of a future tattoo, trying it in AR and chatting with tattoo artists. 2017</p>
