--- a/project3.html
+++ b/project3.html
@@ -2,33 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="vieport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon"  href="images/favicon-2.ico" type="image/x-icon">
     <title>Skrepinskaya Natalia UX/UI Designer</title>
     <link rel="stylesheet" type=text/css href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700|Rokkitt" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-    <div class="top-panel">
+
+  <header>
       <div class="container">
-        <a href="index.html#home">
+        <a href="#home">
           <picture>
             <source srcset="images/logo/logo35@1x.png 1x, images/logo/logo35@2x.png 2x, images/logo/logo35@3x.png 3x" media="(max-width: 599px)">
             <source srcset="images/logo/logo70@1x.png 1x, images/logo/logo70@2x.png 2x, images/logo/logo70@3x.png 3x" media=" (min-width: 600px) and (max-width: 960px)">
-            <source srcset="images/logo/logo100@1x.png 1x, images/logo/logo100@2x.png 2x, images/logo/logo100@3x.png 3x">
+            <source srcset="images/logo/logo100@1x.png 1x, images/logo/logo100@2x.png 2x, images/logo/logo100@3x.png 3x" media="(min-width: 961px)">
             <img src="images/logo/logo100@1x.png" srcset="images/logo/logo100@1x.png 1x, images/logo/>logo100@2x.png 2x, images/logo/Logo100@3x.png 3x" class="logo" alt="logo">
           </picture>
         </a>
-        <nav class="menu js-menu">
-	        <ul class="menu__list">
-            <li class="menu__list-item"><a href="index.html#my_works" class="menu__link">My Works</a></li>
-            <li class="menu__list-item"><a href="index.html#my_story" class="menu__link">My Story</a></li>
-            <li class="menu__list-item"><a href="index.html#contact_me" class="menu__link">Contact Me</a></li>
+        <nav>
+          <ul>
+            <li><a href="index.html#my_works">My Works</a></li>
+            <li><a href="index.html#my_story">My Story</a></li>
+            <li><a href="index.html#contact_me">Contact Me</a></li>
           </ul>
         </nav>
       </div>
-    </div>
   </header>
+
   <div class="container-project">
     <div class="project-wrap">
       <img src="images/project3/1@1x.png" srcset="images/project3/1@1x.png 1x, images/project3/1@2x.png 2x, images/project3/1@3x.png 3x" alt="Presentation page of Vocabulary App">
