--- a/project3.html
+++ b/project3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="vieport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon"  href="images/favicon-2.ico" type="image/x-icon">
     <title>Skrepinskaya Natalia UX/UI Designer</title>
     <link rel="stylesheet" type=text/css href="css/style.css">
@@ -12,7 +12,7 @@
 
   <header>
       <div class="container">
-        <a href="#home">
+        <a href="index.html#home">
           <picture>
             <source srcset="images/logo/logo35@1x.png 1x, images/logo/logo35@2x.png 2x, images/logo/logo35@3x.png 3x" media="(max-width: 599px)">
             <source srcset="images/logo/logo70@1x.png 1x, images/logo/logo70@2x.png 2x, images/logo/logo70@3x.png 3x" media=" (min-width: 600px) and (max-width: 960px)">
